style/custom.css
/* ... */
.navbar-fixed-top .navbar-inner, .navbar-static-top .navbar-inner{
	border-bottom: 2px solid [[setting:color2]]; /* Color*/
}

.navbar-fixed-top .navbar-inner, .navbar-fixed-bottom .navbar-inner{
	padding: 0;
}

#page-navbar{
	margin: 0 0 8px 0;
}

#main_navigation{
	background-color: [[setting:color2]]; /* Color*/
	color: [[setting:color3]];
	height: auto;
}

#main_navigation .nav{
	padding: 8px 15px;
	margin: 0;
	list-style: none;
	background-color: transparent;
	color: [[setting:color3]];
	min-height: 20px;
}

#main_navigation .nav>li>a{
	background-color: transparent;
	color: [[setting:color3]];
	font-weight: normal;
}

#main_navigation .nav>li {
	float: left;
	line-height: 20px;
	padding: 0 10px;
	border-right: 1px solid [[setting:color3]];
}

#main_navigation .nav>li:last-child{
	border-right: 0;
}

.dropdown-menu{
    background-color: #f5f5f5;
    border: 1px solid #e3e3e3;
    border-radius: 4px;
}

.dropdown-menu>li>a:hover, .dropdown-menu>li>a:focus, .dropdown-submenu:hover>a, .dropdown-submenu:focus>a {
    color: [[setting:color3]];
    background-color: [[setting:color2]];
    background-image: none;
}

#main_navigation .nav .dropdown-toggle .caret {
	border-top-color: [[setting:color3]];
	border-bottom-color: [[setting:color3]];
}

#main_menu{
	margin-right: 20px;
}

.dropdown-submenu.pull-left>.dropdown-menu {
	min-width: 100%;
}

.dropdown-submenu.pull-left {
    min-width: 260px;
}

#main_menu .navbar-search{
	margin-left: 15px;
}

.agora_navbar{
	text-align: right;
}
.agora_navbar img{
	margin-right: 5px;
	vertical-align: top;
}

/* Footer */

#page-footer{
    border-top: 0;
    padding: 0;
}
#page-footer-top{
	background-color: [[setting:color2]]; /* Color*/
	color: [[setting:color3]];
    padding: 1em;
    text-align: center;
}

#page-footer-top .social-icons img,
#page-footer-top .social-icons i{
	margin-left: 3px;
	margin-bottom: 3px;
	height: 32px;
    width: 32px;
    line-height: 32px;
    font-size: 20px;
    color: white;
    vertical-align: middle;
}

#page-footer-top .social-icons  i.fa-globe{
	background-color: [[setting:color3]];
	color: [[setting:color2]];
}

#page-footer-top .social-icons  i.fa-phone{
	background-color: #34af23;
}

#page-footer-top .social-icons  i.fa-envelope{
	background-color: #9B90C8;
}

#page-footer-top .social-icons .nodes img{
	background-color: #1b393a;
}

#page-footer-top .social-icons .intranet img{
	background-color: #739cce;
}

#page-footer-top .social-icons  i.fa-facebook{
	background-color: #3b5998;
}

#page-footer-top .social-icons i.fa-twitter{
	background-color: #55acee;
}

#page-footer-top .social-icons i.fa-google-plus{
	background-color: #d34836;
}

#page-footer-top .social-icons i.fa-pinterest{
	background-color: #cb2027;
}

#page-footer-top .social-icons i.fa-instagram{
	background-color: #517fa4;
}

#page-footer-top .social-icons i.fa-flickr{
	background-color: #ff0084;
}

#page-footer-top .social-icons i.fa-youtube{
	background-color: #cd201f;
}

#page-footer-top .social-icons i.fa-linkedin{
	background-color: #007bb6;
}

#page-footer-top a{
	color: [[setting:color3]];
	text-decoration: underline;
}

#page-footer-top a.btn, #page-footer-top .dropdown-menu a{
	color: #333;
	text-decoration: none;
}
#page-footer-top .dropdown-menu>li>a:hover{
	color: white;
}


#page-footer-top a:hover{
	text-decoration: none;
}

.footerlogos{
	text-align: center;
	margin: 8px 0;
}

#page{
    padding: 8px 20px;
}

.logininfo img{
	margin-right: 5px;
}

.img-circle.userpic {
	border: 1px solid #DDD;
}

#message_notifier{
	margin-right: 20px;
	margin-top: 2px;
}

#message_notifier #message_contents>li:hover, #message_notifier #message_contents>li:hover .time{
    color: [[setting:color3]];
    background-color: [[setting:color2]];
}


.course-content .current {
	background-color: #f5f5f5;
}

#newmessageoverlay{
    display: none;
}

.nav-tabs>.active>a, .nav-tabs>.active>a:hover, .nav-tabs>.active>a:focus,
.nav-tabs>.ui-state-active>a, .nav-tabs>.ui-state-active>a:hover, .nav-tabs>.ui-state-active>a:focus {
	color: #555;
	cursor: default;
	background-color: #fff;
	border: 1px solid #ddd;
	border-bottom-color: transparent;
}

#showhideblocks, #showhideblocks i {
    height: 36px;
    width: 36px;
    cursor: pointer;
    text-align: center;
}

#showhideblocks:before{
	display: inline-block;
	font: normal normal normal 24px/1 FontAwesome;
	text-rendering: auto;
	line-height: 36px;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

#showhideblocks.expanded:before{
    content:"\f066";
}
#showhideblocks.collapsed:before{
    content:"\f065";
}


input.form-submit, input#id_submitbutton, input#id_submitbutton2, .path-admin .buttons input[type="submit"], td.submit input {
	color: [[setting:color3]];
	background-color: [[setting:color2]];
	background-image: -moz-linear-gradient(top,rgba(255,255,255,0.2),rgba(0,0,0,0.2));
	background-image: -webkit-gradient(linear,0 0,0 150%,from(rgba(255,255,255,0.2)),to(rgba(0,0,0,0.2)));
	background-image: -webkit-linear-gradient(top,rgba(255,255,255,0.2),rgba(0,0,0,0.2));
	background-image: -o-linear-gradient(top,rgba(255,255,255,0.2),rgba(0,0,0,0.2));
	background-image: linear-gradient(to bottom,rgba(255,255,255,0.2),rgba(0,0,0,0.2));
	background-image: linear-gradient(to bottom,rgba(255,255,255,0.2),rgba(0,0,0,0.2));
	border-color: [[setting:color2]];
	border-color: rgba(0,0,0,0.1) rgba(0,0,0,0.1) rgba(0,0,0,0.25);
	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='[[setting:color2]]',endColorstr='[[setting:color2]]',GradientType=0);
	filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
}
/* ... */

